--- a/ICDApp/ICD/src/main/AndroidManifest.xml
+++ b/ICDApp/ICD/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:allowBackup="true"
         android:icon="@drawable/app_logo_desktop_icd"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:configChanges="locale">
 
         <meta-data
         android:name="WebApiRoot"
